Remove horizontal scrollbar when moving card, also move it percentage of width instead of fixed num pixels

--- a/app/assets/stylesheets/study.css
+++ b/app/assets/stylesheets/study.css
@@ -1,6 +1,7 @@
 .study {
   height: 100vh;
   overflow-y: hidden;
+  overflow-x: hidden;
 }
 
 .study > .stats {
